--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background: linear-gradient(to bottom right, #2e004f, #531a9b);
+    background: linear-gradient(to bottom right, #000000, #1c1d1f);
     color: #fff;
     overflow-x: hidden;
     position: relative;
@@ -10,7 +10,7 @@ body {
   .cont {
     padding-top: 10px;
     min-height: 100vh;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(5, 5, 5, 0.6);
     position: relative;
     display: flex;
     flex-direction: column;
@@ -23,27 +23,27 @@ body {
     left: 30px;
     height: 80px;
     width: 80px;
-    border: solid #b333ff;
+    border: solid #fcee09;
     border-radius: 20%;
     display: flex;
     align-items: center;
     justify-content: center;
     z-index: 1;
-    background-color: #7a00ff;
+    background-color: #fcee09;
   }
   .barra {
     width: 98%;
     border-radius: 20px;
     height: 120px;
-    background-color: rgba(123, 31, 162, 0.2);
+    background-color: #141413;
     position: relative;
     z-index: 0;
     margin-bottom: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 8px #fcee09;
     transition: background-color 0.3s ease;
   }
   .barra:hover {
-    background-color: rgba(144, 82, 179, 0.3);
+    background-color: #fcee09;
   }
   .icone {
     font-size: 2rem;
@@ -53,8 +53,8 @@ body {
     width: 98%;
     border-radius: 20px;
     height: 120px;
-    background-color: rgba(123, 31, 162, 0.2);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    background-color: #181817;
+    box-shadow: 0 2px 5px#fcee09;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -64,7 +64,7 @@ body {
   }
   .saldo:hover,
   .perda:hover {
-    background-color: rgba(144, 82, 179, 0.3);
+    background-color: #fcee09;
   }
   .saldo h5,
   .perda h5 {
@@ -90,9 +90,9 @@ body {
     z-index: 1;
   }
   .button {
-    background-color: rgba(123, 31, 162, 0.7);
-    border: 2px solid #b333ff;
-    color: #fff;
+    background-color: #181816;
+    border: 2px solid #fcee09;
+    color: #000;
     padding: 10px 20px;
     font-size: 16px;
     border-radius: 5px;
@@ -111,20 +111,20 @@ body {
   }
   .custom-table {
     width: 100%;
-    background-color: rgba(46, 0, 79, 0.4);
-    color: #fff;
+    background-color: #fcee09;
+    color: #2b2828;
     border-collapse: collapse;
     margin-top: 20px;
   }
   .custom-table th,
   .custom-table td {
-    border: 1px solid #fff;
+    border: 1px solid #fcee09;
     padding: 8px;
     text-align: left;
-    background-color: rgba(46, 0, 79, 0.3);
+    background-color: #fcee09;
   }
   .custom-table th {
-    background-color: rgba(46, 0, 79, 0.5);
+    background-color: rgba(23, 21, 24, 0.5);
   }
   .tabela {
     width: 95%;
